--- a/main.css
+++ b/main.css
@@ -80,6 +80,10 @@ figcaption {
   margin-bottom: 75px;
 }
 
+.timeline ul {
+  text-align: left;
+}
+
 .footer {
   height: 80px;
   border-top: solid 1px black;
